# gitea-agents

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  agent_runner.py  build_image.py  comment_analyzer.py  config.py  docker-compose.yml  gitea_client.py  main.py  prompt_template.txt  pyproject.toml  requirements.txt  ship_image.py  subagent.py  test.py  test_agent_runner.py  test_comment_analyzer.py  test_comment_qa.py  test_integration.py  test_live_comment_qa_e2e.py  test_main_state.py  tests.md  utils.py
.kilocode/rules/: product.md
e2e/: test_live_comment_qa_e2e.py  test_live_issue_branch_flow_e2e.py  test_live_issue_plan_e2e.py
