[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kilo-agent"
version = "0.1.0"
description = "Autonomous agent for Gitea issue resolution using AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "psutil",
]
authors = [
    {name = "Kilo Agent Team"},
]

[project.scripts]
ship-image = "ship_image:main"
test = "test:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-dir]
"" = "."